name:                ftindent
version:             0.1.0.0
synopsis:            Re-indent function type signatures
description:         Please see README.md
homepage:            http://github.com/danchoi/ftindent#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel Choi
maintainer:          danchoi@danielchoi.com
copyright:           MIT License
category:            Text
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable ftindent
  hs-source-dirs:      .
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/danchoi/ftindent
